# ParticleSim

./: CMakeLists.txt  README.md  main.cpp
GUI/: Window.cpp  Window.h
particles/: GlobalTypes.h  Interaction.h  Particle.cpp  Particle.h  ParticleTypes.h
simulation/: Simulation.cpp  Simulation.h
utils/: Point.h  Vector.cpp  Vector.h
